src/core/snapshots/tailcall__core__errata__tests__from_validation.snap
---
source: src/core/errata.rs
expression: error.to_string()
---
Invalid Configuration
Caused by:
  • Base URL needs to be specified: Set `baseURL` in @http or @server directives [at Query.users.@http.baseURL]
